tests/samples/invalid/type_before_member.pn
word8 Foo
{
	i8 x,
}

word8 Bar
{
	Foo foo,
}
